--- a/app/src/main/res/layout/invoice.xml
+++ b/app/src/main/res/layout/invoice.xml
@@ -220,7 +220,7 @@
                         android:layout_height="wrap_content"
                         android:layout_column="4"
                         android:layout_marginLeft="20dp"
-                        android:text="Qty"
+                        android:text=" Person"
                         android:textColor="#000"
                         android:textSize="14dp" />
 
