--- a/app/src/main/res/layout/activity_user__info.xml
+++ b/app/src/main/res/layout/activity_user__info.xml
@@ -69,7 +69,6 @@
         android:layout_margin="20dp"
         android:layout_marginLeft="10dp"
         android:background="@drawable/dropdown_mainscreen"
-
         android:layout_marginRight="10dp" />
 
     <TextView
@@ -85,17 +84,20 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:textColor="#fff"
+        android:maxEms="4"
+        android:maxLength="4"
         android:id="@+id/pincode"
+        android:inputType="numberPassword"
 
         />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
+        android:layout_width="200dp"
+        android:layout_height="70dp"
         android:layout_gravity="center"
+        android:layout_margin="20dp"
         android:layout_marginBottom="21dp"
-        android:layout_margin="10dp"
         android:background="@color/colorPrimaryDark"
         android:text="save"
         android:textColor="#fff"
