--- a/app/src/main/res/layout/dailog_pincode.xml
+++ b/app/src/main/res/layout/dailog_pincode.xml
@@ -18,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:inputType="numberPassword"
         android:layout_margin="10dp"
         android:hint="Pin Code"/>
 
