--- a/app/src/main/res/layout-sw600dp/invoice.xml
+++ b/app/src/main/res/layout-sw600dp/invoice.xml
@@ -1,204 +1,202 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    > <include
-    android:id="@+id/app_bar_history"
-    layout="@layout/app_bar">
-</include>
+    android:weightSum="1">
+    <include
+        android:id="@+id/app_bar_history"
+        layout="@layout/app_bar">
+    </include>
 
-    <Button
-        android:id="@+id/print"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Print Invoice"
-        android:textSize="25sp"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="15dp"
-        android:layout_marginStart="15dp"
         android:background="@drawable/border"
-        android:orientation="vertical">
+        android:padding="15dp"
+        android:orientation="vertical"
+        android:layout_weight="0.48">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/receipt"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
-            android:text=" Epay Receipt"
+            android:text="Reciept"
             android:textColor="@android:color/background_dark"
-            android:textSize="50dp" />
+            android:textSize="34sp" />
+
 
         <TextView
             android:id="@+id/transId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="87dp"
+            android:layout_marginTop="47dp"
             android:text="Id:"
             android:textColor="@android:color/background_dark"
-            android:textSize="24sp" />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/t_trans_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/transId"
-            android:layout_marginLeft="64dp"
-            android:layout_marginStart="64dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginStart="30dp"
             android:layout_toEndOf="@+id/transId"
             android:layout_toRightOf="@+id/transId"
+            android:textSize="16sp"
             android:text="12345"
             android:textColor="@color/zxing_custom_result_view" />
 
         <TextView
             android:id="@+id/textView11"
+            android:textSize="16sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/transId"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="26dp"
             android:text="Date:"
             android:textColor="@android:color/background_dark"
-            android:textSize="24sp" />
+            />
 
         <TextView
             android:id="@+id/t_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
-            android:layout_above="@+id/textView13"
+            android:text="25-05-2017"
+            android:textSize="16sp"
+            android:layout_alignTop="@+id/textView11"
             android:layout_alignLeft="@+id/t_trans_id"
-            android:layout_alignStart="@+id/t_trans_id"
-            android:text="25-05-2017" />
+            android:layout_alignStart="@+id/t_trans_id" />
 
         <TextView
             android:id="@+id/textView13"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/transId"
-            android:layout_alignStart="@+id/transId"
             android:layout_below="@+id/textView11"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="26dp"
             android:text="Name:"
             android:textColor="@android:color/background_dark"
-            android:textSize="24sp" />
+
+            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/t_cust_name"
             android:layout_width="wrap_content"
+
+            android:textSize="16sp"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/textView13"
-            android:layout_alignLeft="@+id/t_date"
-            android:layout_alignStart="@+id/t_date"
+            android:text=" xyz"
             android:layout_alignTop="@+id/textView13"
-            android:text="xyz" />
+            android:layout_alignLeft="@+id/t_date"
+            android:layout_alignStart="@+id/t_date" />
 
         <TextView
             android:id="@+id/textView15"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/textView13"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="36dp"
+            android:layout_below="@+id/t_cust_name"
+            android:layout_marginTop="26dp"
             android:text="Phone:"
             android:textColor="@android:color/background_dark"
-            android:textSize="24sp" />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/t_contact"
+            android:textSize="16sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/textView15"
+            android:text="123456789"
             android:layout_alignLeft="@+id/t_cust_name"
-            android:layout_alignStart="@+id/t_cust_name"
-            android:text="123456789" />
+            android:layout_alignStart="@+id/t_cust_name" />
 
-        <TextView
-            android:id="@+id/textView17"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
+        <LinearLayout
+            android:id="@+id/layout1"
+            android:layout_width="match_parent"
+            android:layout_height="75dp"
             android:layout_below="@+id/textView15"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="36dp"
-            android:text="From:"
-            android:textColor="@android:color/background_dark"
-            android:textSize="24sp" />
+            android:weightSum="1">
 
-        <TextView
-            android:id="@+id/textView18"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/textView4"
+                android:textSize="16sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:text="From:"
+                android:textColor="@android:color/background_dark" />
+
+            <TextView
+                android:id="@+id/t_from"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="9dp"
+                android:textSize="16sp"
+                android:layout_marginTop="30dp"
+                android:text="TextView" />
+        </LinearLayout>
+
+        <LinearLayout
+
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/textView17"
-            android:layout_alignLeft="@+id/textView13"
-            android:layout_alignRight="@+id/textView17"
-            android:layout_alignStart="@+id/textView13"
-            android:layout_below="@+id/textView17"
-            android:layout_marginTop="43dp"
-            android:text="To:"
-            android:textColor="@android:color/background_dark"
-            android:textSize="24sp" />
+            android:layout_below="@+id/layout1">
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="To:"
+                android:textSize="16sp"
+                android:textColor="@android:color/background_dark" />
+
+            <TextView
+                android:id="@+id/t_to"
+                android:textSize="16sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="24dp"
+                android:text="TextView" />
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-
-            android:layout_alignParentEnd="true"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:layout_marginEnd="31dp"
+            android:layout_marginRight="31dp"
+            android:layout_alignBottom="@+id/t_date"
             android:layout_alignParentRight="true"
-            android:layout_below="@+id/t_date"
-            android:layout_marginEnd="29dp"
-            android:layout_marginRight="29dp"
-            android:background="@drawable/qr_img" />
+            android:layout_alignParentEnd="true" />
 
         <TextView
-            android:id="@+id/t_from"
-            android:layout_width="200dp"
-            android:layout_height="30dp"
-            android:layout_alignBottom="@+id/textView17"
-            android:layout_alignLeft="@+id/t_contact"
-            android:layout_alignStart="@+id/t_contact"
-            android:text="TextView" />
-
-        <TextView
-            android:id="@+id/t_to"
-            android:layout_width="200dp"
-            android:layout_height="30dp"
-            android:text="TextView"
-            android:layout_alignBaseline="@+id/textView18"
-            android:layout_alignBottom="@+id/textView18"
-            android:layout_alignRight="@+id/t_from"
-            android:layout_alignEnd="@+id/t_from" />
-
-        <TextView
-            android:id="@+id/tvTicketPurchased"
+            android:id="@+id/ticketPurchasedHeading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/t_to"
+            android:layout_below="@+id/layout1"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="30dp"
             android:gravity="center"
+            android:padding="5dp"
             android:text="Tickets Purchased"
             android:textColor="@android:color/background_dark"
-            android:textSize="40dp" />
+            android:textSize="24sp" />
 
         <ScrollView
+            android:id="@+id/scrollView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tvTicketPurchased"
-            android:layout_marginTop="40dp">
+            android:layout_below="@+id/ticketPurchasedHeading"
+            android:layout_marginTop="20dp">
 
             <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+
+                android:layout_height="30dp">
 
                 <TableRow
                     android:layout_width="match_parent"
@@ -208,106 +206,123 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_column="1"
-                        android:layout_marginLeft="40dp"
                         android:text="Fare Type"
                         android:textColor="#000"
-                        android:textSize="24dp" />
+
+                        android:textSize="16sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_column="2"
-                        android:layout_marginLeft="60dp"
+                        android:layout_marginLeft="50dp"
                         android:text="Net"
                         android:textColor="#000"
-                        android:textSize="24dp" />
+
+
+                        android:textSize="16sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_column="3"
-                        android:layout_marginLeft="30dp"
+                        android:layout_marginLeft="20dp"
                         android:text="Fare"
                         android:textColor="#000"
-                        android:textSize="24dp" />
+
+                        android:textSize="16sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_column="4"
-                        android:layout_marginLeft="30dp"
-                        android:text="Qty"
+                        android:layout_marginLeft="20dp"
+                        android:text=" Person"
                         android:textColor="#000"
-                        android:textSize="24dp" />
+
+                        android:textSize="16sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_column="5"
-                        android:layout_marginLeft="30dp"
+                        android:layout_marginLeft="20dp"
                         android:text="Total"
                         android:textColor="#000"
-                        android:textSize="24dp" />
+
+                        android:textSize="16sp" />
 
                 </TableRow>
 
-                <TableRow android:background="@color/colorPrimary">
+                <TableRow android:background="@android:color/holo_blue_dark">
 
                     <TextView
                         android:id="@+id/fareType"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="30dp"
                         android:layout_column="1"
-                        android:layout_marginLeft="40dp" />
+                        android:layout_marginLeft="30dp" />
 
                     <TextView
                         android:id="@+id/net"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_column="2"
-                        android:layout_marginLeft="60dp"
+                        android:layout_marginLeft="50dp"
                         android:text="Net"
                         android:textColor="#000"
-                        android:textSize="24dp" />
+
+                        android:textSize="16sp" />
 
                     <TextView
                         android:id="@+id/farePrice"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_column="3"
-                        android:layout_marginLeft="30dp"
+                        android:layout_marginLeft="20dp"
                         android:text="Fare"
                         android:textColor="#000"
-                        android:textSize="24dp" />
+
+                        android:textSize="16sp" />
 
                     <TextView
                         android:id="@+id/no_of_persons"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_column="4"
-                        android:layout_marginLeft="30dp"
+                        android:layout_marginLeft="20dp"
                         android:text="Qty"
                         android:textColor="#000"
-                        android:textSize="24dp" />
+
+                        android:textSize="16sp" />
 
                     <TextView
                         android:id="@+id/total"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_column="5"
-                        android:layout_marginLeft="30dp"
+                        android:layout_marginLeft="20dp"
                         android:text="Total"
                         android:textColor="#000"
-                        android:textSize="24dp" />
+                        android:textSize="14dp" />
 
                 </TableRow>
             </TableLayout>
-
-
         </ScrollView>
     </RelativeLayout>
 
 
+
+    <Button
+        android:id="@+id/print"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Print Invoice"
+        android:layout_marginTop="100dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_gravity="center_horizontal|center"
+        android:textSize="25sp" />
 
 
 
