--- a/app/src/main/res/layout/invoice.xml
+++ b/app/src/main/res/layout/invoice.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:weightSum="1">
     <include
         android:id="@+id/app_bar_history"
         layout="@layout/app_bar">
@@ -12,11 +13,11 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="530dp"
         android:background="@drawable/border"
         android:padding="15dp"
-
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_weight="0.48">
 
         <TextView
             android:id="@+id/receipt"
@@ -31,10 +32,10 @@
             android:id="@+id/transId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="47dp"
+            android:layout_marginTop="60dp"
             android:text="Id:"
             android:textColor="@android:color/background_dark"
-            android:textSize="14sp" />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/t_trans_id"
@@ -45,25 +46,28 @@
             android:layout_marginStart="30dp"
             android:layout_toEndOf="@+id/transId"
             android:layout_toRightOf="@+id/transId"
+            android:textSize="16sp"
             android:text="12345"
             android:textColor="@color/zxing_custom_result_view" />
 
         <TextView
             android:id="@+id/textView11"
+            android:textSize="16sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/transId"
             android:layout_marginTop="26dp"
             android:text="Date:"
             android:textColor="@android:color/background_dark"
-            android:textSize="14sp" />
+            />
 
         <TextView
             android:id="@+id/t_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="25-05-2017"
-            android:layout_above="@+id/textView13"
+            android:textSize="16sp"
+            android:layout_alignTop="@+id/textView11"
             android:layout_alignLeft="@+id/t_trans_id"
             android:layout_alignStart="@+id/t_trans_id" />
 
@@ -75,14 +79,17 @@
             android:layout_marginTop="26dp"
             android:text="Name:"
             android:textColor="@android:color/background_dark"
-            android:textSize="14sp" />
+
+            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/t_cust_name"
             android:layout_width="wrap_content"
+
+            android:textSize="16sp"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/textView13"
-            android:text="xyz"
+            android:text=" xyz"
             android:layout_alignTop="@+id/textView13"
             android:layout_alignLeft="@+id/t_date"
             android:layout_alignStart="@+id/t_date" />
@@ -95,10 +102,11 @@
             android:layout_marginTop="26dp"
             android:text="Phone:"
             android:textColor="@android:color/background_dark"
-            android:textSize="14sp" />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/t_contact"
+            android:textSize="16sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/textView15"
@@ -115,6 +123,7 @@
 
             <TextView
                 android:id="@+id/textView4"
+                android:textSize="16sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
@@ -126,6 +135,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="9dp"
+                android:textSize="16sp"
                 android:layout_marginTop="30dp"
                 android:text="TextView" />
         </LinearLayout>
@@ -141,10 +151,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="To:"
+                android:textSize="16sp"
                 android:textColor="@android:color/background_dark" />
 
             <TextView
                 android:id="@+id/t_to"
+                android:textSize="16sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="24dp"
@@ -167,7 +179,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/layout1"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="40dp"
             android:gravity="center"
             android:padding="5dp"
             android:text="Tickets Purchased"
@@ -183,7 +195,8 @@
 
             <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+
+                android:layout_height="30dp">
 
                 <TableRow
                     android:layout_width="match_parent"
@@ -195,7 +208,8 @@
                         android:layout_column="1"
                         android:text="Fare Type"
                         android:textColor="#000"
-                        android:textSize="14dp" />
+
+                        android:textSize="16sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -204,7 +218,9 @@
                         android:layout_marginLeft="50dp"
                         android:text="Net"
                         android:textColor="#000"
-                        android:textSize="14dp" />
+
+
+                        android:textSize="16sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -213,7 +229,8 @@
                         android:layout_marginLeft="20dp"
                         android:text="Fare"
                         android:textColor="#000"
-                        android:textSize="14dp" />
+
+                        android:textSize="16sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -222,7 +239,8 @@
                         android:layout_marginLeft="20dp"
                         android:text=" Person"
                         android:textColor="#000"
-                        android:textSize="14dp" />
+
+                        android:textSize="16sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -231,16 +249,19 @@
                         android:layout_marginLeft="20dp"
                         android:text="Total"
                         android:textColor="#000"
-                        android:textSize="14dp" />
+
+                        android:textSize="16sp" />
 
                 </TableRow>
 
-                <TableRow android:background="@android:color/holo_blue_dark">
+                <TableRow
+                    android:layout_marginTop="10dp"
+                    android:background="@android:color/holo_blue_dark">
 
                     <TextView
                         android:id="@+id/fareType"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="30dp"
                         android:layout_column="1"
                         android:layout_marginLeft="30dp" />
 
@@ -252,7 +273,8 @@
                         android:layout_marginLeft="50dp"
                         android:text="Net"
                         android:textColor="#000"
-                        android:textSize="14dp" />
+
+                        android:textSize="16sp" />
 
                     <TextView
                         android:id="@+id/farePrice"
@@ -262,7 +284,8 @@
                         android:layout_marginLeft="20dp"
                         android:text="Fare"
                         android:textColor="#000"
-                        android:textSize="14dp" />
+
+                        android:textSize="16sp" />
 
                     <TextView
                         android:id="@+id/no_of_persons"
@@ -272,7 +295,8 @@
                         android:layout_marginLeft="20dp"
                         android:text="Qty"
                         android:textColor="#000"
-                        android:textSize="14dp" />
+
+                        android:textSize="16sp" />
 
                     <TextView
                         android:id="@+id/total"
@@ -296,9 +320,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Print Invoice"
-            android:layout_marginTop="100dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:textColor="#fff"
+            android:textStyle="bold"
+            android:background="@drawable/bg_btn_route_detailed"
             android:layout_gravity="center_horizontal|center"
             android:textSize="25sp" />
 
