--- a/app/src/main/res/layout/activity_user__info.xml
+++ b/app/src/main/res/layout/activity_user__info.xml
@@ -70,6 +70,23 @@
         android:layout_marginLeft="10dp"
         android:background="@drawable/dropdown_mainscreen"
         android:layout_marginRight="10dp" />
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="20dp"
+        android:textColor="#fff"
+        android:layout_height="wrap_content"
+        android:text="Terminal" />
+
+    <Spinner
+        android:id="@+id/terminalSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:textColor="#fff"
+        android:layout_margin="20dp"
+        android:layout_marginLeft="10dp"
+        android:background="@drawable/dropdown_mainscreen"
+        android:layout_marginRight="10dp" />
 
     <TextView
         android:id="@+id/pin"
@@ -90,7 +107,25 @@
         android:inputType="numberPassword"
 
         />
+    <TextView
+        android:id="@+id/pinTManager"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="20dp"
+        android:textColor="#fff"
+        android:layout_height="wrap_content"
+        android:text="Terminal Manager Pin Code" />
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:textColor="#fff"
+        android:maxEms="4"
+        android:maxLength="4"
+        android:id="@+id/pincodeTManager"
+        android:inputType="numberPassword"
+
+        />
     <Button
         android:id="@+id/button"
         android:layout_width="200dp"
