rizwan > client new changes

--- a/app/src/main/res/layout/activity_user__info.xml
+++ b/app/src/main/res/layout/activity_user__info.xml
@@ -77,7 +77,7 @@
         android:textColor="#fff"
         android:layout_height="wrap_content"
         android:text="Terminal"
-        android:visibility="invisible"/>
+        />
 
     <Spinner
         android:id="@+id/terminalSpinner"
@@ -88,7 +88,7 @@
         android:layout_marginLeft="10dp"
         android:background="@drawable/dropdown_mainscreen"
         android:layout_marginRight="10dp"
-        android:visibility="invisible"/>
+        />
 
     <TextView
         android:id="@+id/pin"
@@ -107,7 +107,6 @@
         android:maxLength="4"
         android:id="@+id/pincode"
         android:inputType="numberPassword"
-
         />
     <TextView
         android:id="@+id/pinTManager"
@@ -115,8 +114,7 @@
         android:layout_marginLeft="20dp"
         android:textColor="#fff"
         android:layout_height="wrap_content"
-        android:text="Terminal Manager Pin Code"
-        android:visibility="invisible"/>
+        android:text="Terminal Manager Pin Code" />
 
     <EditText
         android:layout_width="match_parent"
@@ -127,7 +125,7 @@
         android:maxLength="4"
         android:id="@+id/pincodeTManager"
         android:inputType="numberPassword"
-        android:visibility="invisible"
+
 
         />
     <Button
