--- a/app/src/main/res/layout/dailog_pincode.xml
+++ b/app/src/main/res/layout/dailog_pincode.xml
@@ -21,7 +21,20 @@
         android:inputType="numberPassword"
         android:layout_margin="10dp"
         android:hint="Pin Code"/>
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Enter Terminal Manager Pin Code"
+        android:layout_margin="20dp"
+        />
+    <EditText
+        android:id="@+id/managercode"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="numberPassword"
+        android:layout_margin="10dp"
+        android:hint="Pin Code"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
