--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,19 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#000"
+    android:background="@color/colorAccent"
     android:screenOrientation="portrait"
     >
 
-
+    <include
+        android:id="@+id/app_bar"
+        layout="@layout/app_bar">
+    </include>
     <LinearLayout
+        android:layout_below="@id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:gravity="center"
         android:orientation="vertical"
         android:weightSum="2"
-        android:layout_alignParentTop="true"
+
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
 
