--- a/app/src/main/res/layout/activity_setup_screen.xml
+++ b/app/src/main/res/layout/activity_setup_screen.xml
@@ -10,34 +10,58 @@
         layout="@layout/app_bar">
     </include>
     <LinearLayout
-        android:id="@+id/linear1"
-        android:layout_below="@id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:gravity="center"
         android:orientation="vertical"
-        android:gravity="center">
-        <Button
-            android:id="@+id/btn_setup"
+        android:weightSum="2"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+    <LinearLayout
+        android:id="@+id/btn_setup"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:background="?android:attr/statusBarColor"
+        android:gravity="center"
+        android:orientation="vertical"
+        tools:background="@color/colorAccent">
+        <TextView
+            android:id="@+id/btn_setup1"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_gravity="center"
             android:layout_margin="20dp"
             android:layout_marginBottom="21dp"
-            android:background="@color/colorPrimaryDark"
             android:text="Setup"
-            android:textColor="#fff"
-            android:textSize="30sp" />
-        <Button
-            android:id="@+id/btn_logon"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_gravity="center"
-            android:layout_margin="20dp"
-            android:layout_marginBottom="21dp"
-            android:background="@color/colorPrimaryDark"
-            android:text="Logon"
+            android:gravity="center"
             android:textColor="#fff"
             android:textSize="30sp" />
 
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/btn_logon"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:orientation="vertical">
+    <TextView
+        android:id="@+id/btn_logon1"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_gravity="center"
+        android:layout_margin="20dp"
+        android:layout_marginBottom="21dp"
+        android:text="Login"
+        android:gravity="center"
+        android:textColor="#fff"
+        android:textSize="30sp" />
+    </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
