--- a/app/src/main/res/layout/activity_setup_screen_extended.xml
+++ b/app/src/main/res/layout/activity_setup_screen_extended.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:textColor="#fff"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:text="Organization" />
 
     <Spinner
@@ -32,7 +32,7 @@
         android:background="@drawable/dropdown_mainscreen"
         />
 
-    <TextView
+    <!--<TextView
         android:id="@+id/textView6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -50,7 +50,7 @@
         android:background="@drawable/dropdown_mainscreen"
 
         android:layout_marginRight="10dp"
-        />
+        />-->
 
     <TextView
         android:id="@+id/textView9"
@@ -61,7 +61,7 @@
         android:text="Vehicle Reg No" />
 
     <Spinner
-        android:id="@+id/terminal"
+        android:id="@+id/vehicleRegSpinner"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:textColor="#fff"
@@ -69,7 +69,17 @@
         android:layout_marginLeft="10dp"
         android:background="@drawable/dropdown_mainscreen"
         android:layout_marginRight="10dp" />
-    <TextView
+    <Button
+        android:id="@+id/saveSettings"
+        android:layout_width="200dp"
+        android:layout_height="70dp"
+       android:layout_gravity="center"
+        android:layout_marginTop="160dp"
+        android:background="@color/colorPrimaryDark"
+        android:text="save"
+        android:textColor="#fff"
+        android:textSize="30sp" />
+   <!-- <TextView
         android:id="@+id/textView10"
         android:layout_width="match_parent"
         android:layout_marginLeft="20dp"
@@ -87,9 +97,9 @@
         android:layout_marginLeft="10dp"
         android:background="@drawable/dropdown_mainscreen"
         android:layout_marginRight="10dp"
-        />
+        />-->
 
-    <TextView
+    <!-- <TextView
         android:id="@+id/pin"
         android:layout_width="match_parent"
         android:layout_marginLeft="20dp"
@@ -107,7 +117,7 @@
         android:id="@+id/pincode"
         android:inputType="numberPassword"
         />
-    <TextView
+   <TextView
         android:id="@+id/pinTManager"
         android:layout_width="match_parent"
         android:layout_marginLeft="20dp"
@@ -126,18 +136,8 @@
         android:inputType="numberPassword"
 
 
-        />
-    <Button
-        android:id="@+id/button"
-        android:layout_width="200dp"
-        android:layout_height="70dp"
-        android:layout_gravity="center"
-        android:layout_margin="20dp"
-        android:layout_marginBottom="21dp"
-        android:background="@color/colorPrimaryDark"
-        android:text="save"
-        android:textColor="#fff"
-        android:textSize="30sp" />
+        />-->
+
 
 
 </LinearLayout>
