--- a/app/src/main/res/layout/dialog_terminal_manager_pin_code.xml
+++ b/app/src/main/res/layout/dialog_terminal_manager_pin_code.xml
@@ -6,6 +6,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:id="@+id/btn_cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/ic_delete"
+        android:layout_gravity="end"/>
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:text="Select Terminal" />
+
+    <Spinner
+        android:id="@+id/terminalSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_margin="20dp"
+        android:background="@drawable/dropdown_mainscreen" />
 
     <TextView
         android:layout_width="wrap_content"
