--- a/app/src/main/res/layout/activity_setup_screen_extended.xml
+++ b/app/src/main/res/layout/activity_setup_screen_extended.xml
@@ -52,7 +52,7 @@
         android:layout_marginRight="10dp"
         />-->
 
-    <TextView
+   <!-- <TextView
         android:id="@+id/textView9"
         android:layout_width="match_parent"
         android:layout_marginLeft="20dp"
@@ -68,7 +68,7 @@
         android:layout_margin="20dp"
         android:layout_marginLeft="10dp"
         android:background="@drawable/dropdown_mainscreen"
-        android:layout_marginRight="10dp" />
+        android:layout_marginRight="10dp" />-->
     <Button
         android:id="@+id/saveSettings"
         android:layout_width="200dp"
