--- a/app/src/main/res/layout/dialog_terminal_manager_pin_code.xml
+++ b/app/src/main/res/layout/dialog_terminal_manager_pin_code.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_margin="30dp"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -19,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
-        android:text="Select Terminal" />
+        android:text="Select Terminal Id" />
 
     <Spinner
         android:id="@+id/terminalSpinner"
